# docs/swagger.yaml
@@ -1,15 +1,26 @@
 basePath: /
 definitions:
-  handlers.CreateTaskRequest:
+  handlers.TaskBody:
     properties:
       description:
         type: string
       title:
         type: string
     type: object
+  handlers.TaskResponse:
+    properties:
+      description:
+        type: string
+      id:
+        type: string
+      is_done:
+        type: boolean
+      title:
+        type: string
+    type: object
   response.Response:
     properties:
-      error:
+      message:
         type: string
       status:
         type: string
@@ -33,7 +44,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/handlers.CreateTaskRequest'
+          $ref: '#/definitions/handlers.TaskBody'
       produces:
       - application/json
       responses:
@@ -58,6 +69,89 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: CreateTask
+      tags:
+      - task
+  /api/v1/task/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get task
+      operationId: get-task
+      parameters:
+      - description: Task ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.TaskResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: GetTask
+      tags:
+      - task
+    put:
+      consumes:
+      - application/json
+      description: edit task
+      operationId: edit-task
+      parameters:
+      - description: task info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.TaskBody'
+      - description: Task ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: EditTask
       tags:
       - task
 securityDefinitions:
